rename main.js to index.js to work on GitHub

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
             <div class="keyboard"></div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
