Added keyboard design

--- a/index.html
+++ b/index.html
@@ -30,7 +30,40 @@
             <div class="paragraph">
                 <span class="content" id="content-to-type"></span>
             </div>
-            <div class="keyboard"></div>
+            <div class="keyboard">
+                <div class="top">
+                    <div class="key"><span>Q</span></div>
+                    <div class="key"><span>W</span></div>
+                    <div class="key"><span>E</span></div>
+                    <div class="key"><span>R</span></div>
+                    <div class="key"><span>T</span></div>
+                    <div class="key"><span>Y</span></div>
+                    <div class="key"><span>U</span></div>
+                    <div class="key"><span>I</span></div>
+                    <div class="key"><span>O</span></div>
+                    <div class="key"><span>P</span></div>
+                </div>
+                <div class="middle">
+                    <div class="key">A</div>
+                    <div class="key">S</div>
+                    <div class="key">D</div>
+                    <div class="key">F</div>
+                    <div class="key">G</div>
+                    <div class="key">H</div>
+                    <div class="key">J</div>
+                    <div class="key">K</div>
+                    <div class="key">L</div>
+                </div>
+                <div class="bottom">
+                    <div class="key">Z</div>
+                    <div class="key">X</div>
+                    <div class="key">C</div>
+                    <div class="key">V</div>
+                    <div class="key">B</div>
+                    <div class="key">N</div>
+                    <div class="key">M</div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="index.js"></script>
