--- a/index.html
+++ b/index.html
@@ -32,36 +32,36 @@
             </div>
             <div class="keyboard">
                 <div class="top">
-                    <div class="key"><span>Q</span></div>
-                    <div class="key"><span>W</span></div>
-                    <div class="key"><span>E</span></div>
-                    <div class="key"><span>R</span></div>
-                    <div class="key"><span>T</span></div>
-                    <div class="key"><span>Y</span></div>
-                    <div class="key"><span>U</span></div>
-                    <div class="key"><span>I</span></div>
-                    <div class="key"><span>O</span></div>
-                    <div class="key"><span>P</span></div>
+                    <div class="key" data-key="113">Q</div>
+                    <div class="key" data-key="119">W</div>
+                    <div class="key" data-key="101">E</div>
+                    <div class="key" data-key="114">R</div>
+                    <div class="key" data-key="116">T</div>
+                    <div class="key" data-key="121">Y</div>
+                    <div class="key" data-key="117">U</div>
+                    <div class="key" data-key="105">I</div>
+                    <div class="key" data-key="111">O</div>
+                    <div class="key" data-key="112">P</div>
                 </div>
                 <div class="middle">
-                    <div class="key">A</div>
-                    <div class="key">S</div>
-                    <div class="key">D</div>
-                    <div class="key">F</div>
-                    <div class="key">G</div>
-                    <div class="key">H</div>
-                    <div class="key">J</div>
-                    <div class="key">K</div>
-                    <div class="key">L</div>
+                    <div class="key" data-key="97">A</div>
+                    <div class="key" data-key="115">S</div>
+                    <div class="key" data-key="100">D</div>
+                    <div class="key" data-key="102">F</div>
+                    <div class="key" data-key="103">G</div>
+                    <div class="key" data-key="104">H</div>
+                    <div class="key" data-key="106">J</div>
+                    <div class="key" data-key="107">K</div>
+                    <div class="key" data-key="108">L</div>
                 </div>
                 <div class="bottom">
-                    <div class="key">Z</div>
-                    <div class="key">X</div>
-                    <div class="key">C</div>
-                    <div class="key">V</div>
-                    <div class="key">B</div>
-                    <div class="key">N</div>
-                    <div class="key">M</div>
+                    <div class="key" data-key="122">Z</div>
+                    <div class="key" data-key="120">X</div>
+                    <div class="key" data-key="99">C</div>
+                    <div class="key" data-key="118">V</div>
+                    <div class="key" data-key="98">B</div>
+                    <div class="key" data-key="110">N</div>
+                    <div class="key" data-key="109">M</div>
                 </div>
             </div>
         </div>
