--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             <div class="paragraph">
                 <span class="content" id="content-to-type"></span>
             </div>
+            <div style="position: absolute; width: 0;height: 0;padding: 0;margin: 0;border: none;color: transparent;">
+                <input type="text" id="input-content"/>
+            </div>
             <div class="keyboard">
                 <div class="top">
                     <div class="key" data-key="113">Q</div>
