--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                     <span style="font-size: 20px;">secs</span>
                 </div>
             </div>
+            <div class="errors"><span>
+                Errors 
+            </span>
+            <span id="error-val">0</span>
+        </div>
         </div>
         <div class="right">
             <div class="paragraph">
