Blocked numbers as input data and changed speed as words per minute if average word length = 10 characters

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="right">
             <div class="evaluation hidden">
-                <span class="speed">Speed/min</span><span id="speed-val">0</span>
+                <span class="speed">Speed</span><span id="speed-val">0</span>
                 <span class="score">Score</span> <span id="score-val">0</span>
             </div>
             <div class="paragraph">
